Fix keyboard z-index

--- a/style.css
+++ b/style.css
@@ -247,6 +247,7 @@ html, body {
 }
 
 .keyboard {
+    z-index: 2;
     width: 100%;
     margin-top: -20px;
     zoom: 0.9;
